src/k8s/platform/services/authentik/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-https-redirect
  namespace: authentik
spec:
  redirectScheme:
    scheme: https
    permanent: true
