src/k8s/platform/services/authentik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
